# midenscan-indexer

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md
.github/workflows/: ci.yml
src/: config.rs  main.rs
src/db/: account.rs  account_storage_slot.rs  account_storage_slot_map.rs  account_update.rs  account_vault_asset.rs  account_verified_component.rs  block.rs  fungible_faucet_account.rs  mod.rs  models.rs  note.rs  note_attachment.rs  note_tag.rs  note_verified_script.rs  nullifier.rs  state_ref.rs  transaction.rs
src/http/: health.rs  metrics.rs  mod.rs  server.rs
src/indexer/: manager.rs  mod.rs  seed.rs
src/indexer/handlers/: account.rs  block.rs  mod.rs  note.rs  nullifier.rs  storage_decoder.rs  transaction.rs
src/metrics/: collector.rs  handler.rs  latest_block.rs  mod.rs
src/rpc/: client.rs  error.rs  mod.rs
src/utils/: format.rs  internal_time.rs  mod.rs
