[package]
name = "midenscan-indexer"
version = "0.14.1"
edition = "2021"
description = "Blockchain data indexing service for Miden"
authors = ["Gateway.fm"]
license = "MIT"
repository = "https://github.com/gateway-fm/midenscan-indexer"

[dependencies]
tokio = { version = "1", features = ["full"] }
miden-node-proto = { version = "0.14.1" }
miden-protocol = { version = "0.14.1" }
miden-standards = { version = "0.14.1" }
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "bigdecimal", "uuid" ] }
uuid = { version = "1", features = ["v5"] }
anyhow = "1.0"
env_logger = "0.11"
log = "0.4"
num-bigint = "0.4.6"
tonic = { version = "0.12.3", features = ["tls-native-roots"] }
once_cell = "1.21.3"
dotenvy = "0.15.7"
axum = { version = "0.7" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
prometheus = "0.13"